# grafana

./: CHANGELOG.md  LICENSE  README.md  grafana.cabal
src/: Grafana.hs
src/Grafana/: Layout.hs
src/Grafana/Plugin/: PieChart.hs
test/: UnitTests.hs
