cabal-version: 2.2
name:
  grafana
version:
  0.1
synopsis:
  small library that provides datatypes corresponding to components of
  grafana dashboards.
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Ethan Jones
maintainer:
  Ethan Jones
category:
  Graphics, Tooling
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Grafana
  build-depends:
    , base >= 4.10 && < 4.13
    , bytestring >= 0.10 && < 0.11
    , aeson >= 1.3 && < 1.5
    , aeson-pretty >= 0.8 && < 0.9
    , text >= 1.2 && < 1.3
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
